Prevent iframes and images from overflowing in pages and descriptions

--- a/source/stylesheets/layout.css
+++ b/source/stylesheets/layout.css
@@ -74,10 +74,12 @@ img {
   -ms-interpolation-mode: bicubic;
   }
 
+iframe,
 img,
 embed,
 object,
 video {
+  display: block;
   max-width: 100%;
   }
 
